--- a/Master-Zhao/Master-Zhao.Shell/Properties/Resources.resx
+++ b/Master-Zhao/Master-Zhao.Shell/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="rundll32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\rundll32.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="shell" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shell.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
